--- a/flex2/style.css
+++ b/flex2/style.css
@@ -1,5 +1,9 @@
 /* nejsme vcerejsi, pouzivame moderni box model */
-*, :after, :before { box-sizing: border-box; }
+*,
+:after,
+:before {
+    box-sizing: border-box;
+}
 
 .ctverecek {
     font: 30px/1 sans-serif;
@@ -8,10 +12,21 @@
     min-height: 100px;
 }
 
-.prvni { background-color: #2ecc71;}
-.druhy { background-color: #f1c40f;}
-.treti { background-color: #3498db;}
-.ctvrty { background-color: #e74c3c;}
+.prvni {
+    background-color: #2ecc71;
+}
+
+.druhy {
+    background-color: #f1c40f;
+}
+
+.treti {
+    background-color: #3498db;
+}
+
+.ctvrty {
+    background-color: #e74c3c;
+}
 
 .kontejner {
     padding: 10px;
@@ -21,3 +36,37 @@
 
 /* ---------------------------------------------------- */
 /* ZDE NAPIŠ VLASTNÍ CSS */
+.kontejner {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.ctverecek {
+    display: flex;
+    align-items: stretch;
+    width: 100%;
+
+}
+
+.prvni {
+    order: 1;
+    flex-basis: 200px;
+    flex-shrink: 0;
+}
+
+.druhy {
+    order: 3;
+    flex-grow: 1;
+}
+
+.treti {
+    order: 2;
+    flex-grow: 1;
+}
+
+.ctvrty {
+    order: 4;
+    flex-basis: 100px;
+    flex-shrink: 0;
+}
