--- a/flex-layout01/style.css
+++ b/flex-layout01/style.css
@@ -16,17 +16,50 @@ body {
 .hlavicka {
   background-color: #2ecc71;
 }
+
 .hlavni {
   background-color: #f1c40f;
 }
+
 .levy {
   background-color: #3498db;
 }
+
 .pravy {
   background-color: #e74c3c;
 }
+
 .paticka {
   background-color: #9b59b6;
 }
 
 /* ---------------------------------------------------- */
+.hlavicka {
+  display: flex;
+}
+
+.kontejner {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.paticka {
+  display: flex;
+}
+
+
+.levy {
+  order: 1;
+  flex-basis: 25%;
+}
+
+.hlavni {
+  order: 2;
+  flex-shrink: 2;
+}
+
+.pravy {
+  order: 3;
+  flex-basis: 20%;
+}
