--- a/flex-layout03/style.css
+++ b/flex-layout03/style.css
@@ -1,8 +1,12 @@
 /* nejsme vcerejsi, pouzivame moderni box model */
-*, :after, :before { box-sizing: border-box; }
+*,
+:after,
+:before {
+    box-sizing: border-box;
+}
 
 body {
-	font-family: sans-serif;
+    font-family: sans-serif;
 }
 
 
@@ -10,10 +14,41 @@ body {
     padding: 20px;
 }
 
-.horni { background-color:#f1c40f ;}
-.prvni { background-color: #2ecc71;}
-.druhy { background-color: #e74c3c;}
-.treti { background-color: #8e44ad;}
+.horni {
+    background-color: #f1c40f;
+}
+
+.prvni {
+    background-color: #2ecc71;
+}
+
+.druhy {
+    background-color: #e74c3c;
+}
+
+.treti {
+    background-color: #8e44ad;
+}
 
 /* ---------------------------------------------------- */
+.kontejner {
+    display: flex;
+    flex-direction: column;
+}
 
+
+.druhyFlexbox {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+}
+
+/* .druhyFlexbox div {
+    width: 33.33%;
+} */
+
+.prvni,
+.druhy,
+.treti {
+    width: calc(100%/3);
+}
